<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_reg_ini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/fabRegIni"
        android:background="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/fabRegIni"
        app:layout_constraintEnd_toStartOf="@+id/fabRegIni"
        app:layout_constraintTop_toTopOf="@+id/fabRegIni">

        <TextView
            android:id="@+id/tv_reg_ini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:text="@string/registro_inicial"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabRegIni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/fabCodR"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />



    <android.support.design.widget.TextInputEditText
        android:id="@+id/etCodR"
        android:inputType="number"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:maxLength="6"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/fabCodR"
        app:layout_constraintEnd_toStartOf="@+id/fabCodR"
        app:layout_constraintTop_toTopOf="@+id/fabCodR" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabCodR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/fabRegSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />



    <android.support.v7.widget.CardView
        android:id="@+id/cv_reg_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/fabRegSub"
        android:background="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/fabRegSub"
        app:layout_constraintEnd_toStartOf="@+id/fabRegSub"
        app:layout_constraintTop_toTopOf="@+id/fabRegSub">

        <TextView
            android:id="@+id/tv_reg_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:text="@string/registro_subsecuente"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabRegSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/fabValidaCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />



    <android.support.v7.widget.CardView
        android:id="@+id/cv_valida_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/fabValidaCuenta"
        android:background="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/fabValidaCuenta"
        app:layout_constraintEnd_toStartOf="@+id/fabValidaCuenta"
        app:layout_constraintTop_toTopOf="@+id/fabValidaCuenta">

        <TextView
            android:id="@+id/tv_valida_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:text="@string/validacion_cuenta"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabValidaCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/fabConsultaValidacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />



    <android.support.v7.widget.CardView
        android:id="@+id/cv_consulta_validacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/fabConsultaValidacion"
        android:background="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/fabConsultaValidacion"
        app:layout_constraintEnd_toStartOf="@+id/fabConsultaValidacion"
        app:layout_constraintTop_toTopOf="@+id/fabConsultaValidacion">

        <TextView
            android:id="@+id/tv_consulta_validacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:text="@string/consulta_validacion_cuenta"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabConsultaValidacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/fabGenerarQR"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />



    <android.support.v7.widget.CardView
        android:id="@+id/cv_generar_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/fabGenerarQR"
        android:background="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/fabGenerarQR"
        app:layout_constraintEnd_toStartOf="@+id/fabGenerarQR"
        app:layout_constraintTop_toTopOf="@+id/fabGenerarQR">

        <TextView
            android:id="@+id/tv_generar_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:text="@string/generar_qr"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabGenerarQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/fabEscanearQr"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />



    <android.support.v7.widget.CardView
        android:id="@+id/cv_escanera_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/fabEscanearQr"
        android:background="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/fabEscanearQr"
        app:layout_constraintEnd_toStartOf="@+id/fabEscanearQr"
        app:layout_constraintTop_toTopOf="@+id/fabEscanearQr">

        <TextView
            android:id="@+id/tv_escanear_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:text="@string/escanear_qr"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabEscanearQr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</android.support.constraint.ConstraintLayout>